# ros_src

./: hirai.txt
hark_ros_stacks/2.0.0/hark-ros-groovy_2.0.0.5841/: Makefile.in  README  configure  configure.in  debuild.sh  libtool
hark_ros_stacks/2.0.0/hark-ros-groovy_2.0.0.5841/debian/: README  changelog
hark_ros_stacks/2.0.0/hark-ros-groovy_2.0.0.5841/n-files/: LocalizeMUSIC_with_HarkMsgs_Publisher_and_Subscriber.n  RosAddHarkInt_Client_and_Service.n  RosHarkIntDynReconf_Sample.n  RosHarkInt_Publisher_and_Subscriber.n
hark_ros_stacks/2.0.0/hark-ros-groovy_2.0.0.5841/src/: AudioStreamFromRos.cc  BeatIOIPublisher.cc  HarkMsgsStreamFromRos.cc  Makefile.in  RosAddHarkIntClient.cc  RosAddHarkIntServer.cc  RosHarkIntDynReconf.cc  RosHarkMsgsPublisher.cc  RosHarkMsgsSubscriber.cc  RosHarkParamsDynReconf.cc  RosHarkParamsSubscriber.cc  RosStdMsgsPublisher.cc  RosStdMsgsSubscriber.cc  StdMsgsStreamFromRos.cc
hark_ros_stacks/hark-fd-1.2.0/: COPYING  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
hark_ros_stacks/hark-fd-1.2.0/.deps/: AudioStreamFromMic.Plo  AudioStreamFromWave.Plo  ChannelSelector.Plo  ConstantLocalization.Plo  Delta.Plo  DeltaMask.Plo  DetectSpeechDuration.Plo  DisplayLocalization.Plo  FeatureExtraction.Plo  LoadSourceLocation.Plo  LocalizationMUSIC.Plo  LocalizeMUSIC.Plo  MFMGeneration.Plo  MelFilterBank.Plo  SaveFeatures.Plo  SaveSourceLocation.Plo  SourceTracker.Plo  SpectralMeanNormalization.Plo  SpeechRecognitionClient.Plo  Synthesize.Plo  Synthesizer.Plo  fft.Plo  libmft_la-AudioStreamFromMic.Plo  libmft_la-AudioStreamFromWave.Plo  libmft_la-ChannelSelector.Plo  libmft_la-ConstantLocalization.Plo  libmft_la-Delta.Plo  libmft_la-DeltaMask.Plo  libmft_la-DetectSpeechDuration.Plo  libmft_la-DisplayLocalization.Plo  libmft_la-FeatureExtraction.Plo  libmft_la-LoadSourceLocation.Plo  libmft_la-LocalizationMUSIC.Plo  libmft_la-LocalizeMUSIC.Plo  libmft_la-MFMGeneration.Plo  libmft_la-MatrixToVector.Plo  libmft_la-MelFilterBank.Plo  libmft_la-MultiFFT.Plo  libmft_la-SaveFeatures.Plo  libmft_la-SaveSourceLocation.Plo  (+10 more)
hark_ros_stacks/hark-fd-1.2.0/debian/: README  README.Debian  changelog  control  rules
hark_ros_stacks/hark-fd-1.2.0/include/: CGHDSS_exec.h  Cexec.h  HarkData.h  HarkFileIO.h  HarkParamsObjects.h  LocalizationMUSIC.hpp  Source.h  SpectralMean.hpp  TimeStamp.h  svd.hpp
hark_ros_stacks/hark-fd-1.2.0/librecorder/: ASRASPRecorder.cpp  ASRASPRecorder.hpp  Makefile.am  Makefile.in  RASP24Recorder.cpp  RASP24Recorder.hpp  RASPRecorder.cpp  RASPRecorder.hpp
hark_ros_stacks/hark-fd-1.2.0/librecorder/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
hark_ros_stacks/hark-fd-1.2.0/libseparation/: MICARY_struct.h  Makefile.in
hark_ros_stacks/hark-fd-1.2.0/src/: AudioStreamFromMic.cc  AudioStreamFromWave.cc  CMLoad.cc  CMMakerFromFFT.cc  CMMakerFromFFTwithFlag.cc  CMSave.cc  Cexec.cpp  ConstantLocalization.cc  DisplayLocalization.cc  GHDSS.cc  GHDSS_SeparateMat.cpp  HRLE.cc  HarkDataStreamSender.cc  HarkFileIO.cpp  LoadSourceLocation.cc  LocalizationFunction.cpp  LocalizationMUSIC.cpp  LocalizeMUSIC.cc  Makefile.am  Makefile.in  SaveRawPCM.cc  SaveSourceLocation.cc  SaveWavePCM.cc  SourceSelectorByDirection.cc  SourceTracker.cc  SpeechRecognitionClient.cc  Synthesize.cc  lppostv1forHARK.cpp
hark_ros_stacks/hark-ros-1.2.0/src/: BeatCandidate.cc  IfRosStdMsgsPublisher.cc  Makefile.am  Makefile.in  RosHarkIntPublisher.cc  RosHarkIntSubscriber.cc  RosHarkParamsDynReconf.cc  RosHarkParamsSubscriber.cc  RosNodeGenerator.cc  STPMPublisher.cc  VERSION.cc
zmq_ros/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
zmq_ros/launch/: experiment_bayesian.launch  experiment_bayesian.launch~  jul.launch  jul.launch~  zmq_admin.launch  zmq_admin.launch~  zmq_admin2.launch  zmq_admin2.launch~  zmq_admin3.launch  zmq_admin3.launch~  zmq_admin4.launch  zmq_admin4.launch~  zmq_bayesian.launch  zmq_bayesian.launch~  zmq_emovoice.launch  zmq_emovoice.launch~  zmq_noun.launch~
zmq_ros/msg/: amivoice_noun_verb.msg  amivoice_noun_verb.msg~  mecab.msg~  mecab_amivoice.msg  mecab_amivoice.msg~  mecab_amivoice2.msg  mecab_amivoice2.msg~  zmq_deb.msg  zmq_deb.msg~  zmq_time.msg~  zmq_time2.msg
zmq_ros/src/: #speech_recog4.cpp#  #zmq_sub.cpp#  #zmq_sub_cpy.cpp#  baxter.cpp~  baxter.hpp  emovoice_sub.cpp~  goal_service.cpp~  move.cpp  robot_browser.hpp  robot_browser.hpp~  speech.h~  speech_recog.cpp  speech_recog2.cpp  speech_recog3.cpp  speech_recog4.cpp  speech_recog4.cpp~  speech_recog_baxter.cpp  speech_recog_baxter.cpp~  speech_recog_baxter2.cpp  speech_recog_baxter2.cpp~  speech_recog_baxter3.cpp  speech_recog_baxter3.cpp~  speech_recog_client.cpp  speech_recog_client.cpp~  speech_recog_conv.cpp  speech_recog_conv.cpp~  zmq_pub.cpp  zmq_pub.cpp~  zmq_ros_subscribe.cpp  zmq_ros_subscribe.cpp~  zmq_sub.cpp  zmq_sub.cpp~  zmq_sub2.cpp  zmq_sub2_new2.cpp  zmq_sub2_new2.cpp~  zmq_sub3.cpp  zmq_sub4.cpp  zmq_sub4.cpp~  zmq_sub_cpy.cpp  zmq_sub_cpy.cpp~  (+1 more)
zmq_ros/src/deep_browser/: baxter.cpp  main.cpp  main.cpp~  main_backup.cpp  main_backup2.cpp  robot.cpp
zmq_ros/src/deep_browser/include/: speech.h  speech.h~  zmq.h  zmq_help.hpp
zmq_ros/src/emovoice_browser/: aaa  extract.cpp  extract.cpp~  main.cpp
zmq_ros/src/emovoice_browser_mpr/: main.cpp  move.cpp  robot.cpp~  speech_recog_baxter2.cpp~
zmq_ros/src/emovoice_browser_mpr/include/: speech.h~
zmq_ros/src/emovoice_browser_mpr/lib/: msgpack.lib  msgpackd.lib
zmq_ros/src/experiment_browser/: main.cpp  move.cpp~
zmq_ros/src/speech_recog/: baxter.cpp~  main.cpp~  speech_recog.cpp~
zmq_ros/src/speech_recog_10word/: command.cpp  main.cpp  main.cpp~
zmq_ros/src/speech_recog_10word/include/: WaveFile.h  speech.h  speech.h~
zmq_ros/src/speech_recog_backup0508/: extract.cpp~  main.cpp
zmq_ros/src/speech_recog_bag/: command.cpp  command.cpp~  extract.cpp  main.cpp  main.cpp~
zmq_ros/src/speech_recog_bag/include/: speech.h~
zmq_ros/src/speech_recog_bag/include/msgpack/: speech.h
zmq_ros/src/speech_recog_bag/lib/: libzmq_d.lib
(+556 files in other folders)
